--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -30,7 +31,7 @@
     <title>IT'S A ME, JAINE!</title>
   </head>
   <body class="bc_beige">
-    <header class="main_light">
+    <header class="main_light main_nav">
       <nav>
         <ul class="nav-list">
           <a href="/#work" class="nav color_orange"><li><div class="nav_num">01</div><div class="nav_menu">WORK</div></li></a>
