--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <title>IT'S A ME, JAINE!</title>
   </head>
   <body class="bc_beige">
+    <!-- <div class="cursor"></div> -->
     <header class="main_light main_nav">
       <nav>
         <ul class="nav-list">
