Details from feedback

--- a/public/index.html
+++ b/public/index.html
@@ -36,10 +36,10 @@
     <header class="main_light main_nav">
       <nav>
         <ul class="nav-list">
-          <a href="/#work" class="nav color_orange"><li><div class="nav_num">01</div><div class="nav_menu">WORK</div></li></a>
-          <a href="/#info" class="nav color_orange"><li><div class="nav_num">02</div><div class="nav_menu">INFO</div></li></a>
-          <a href="/#archive" class="nav color_orange"><li><div class="nav_num">03</div><div class="nav_menu">ARCHIVE</div></li></a>
-          <a href="/#footer" class="nav color_orange"><li><div class="nav_num">04</div><div class="nav_menu">CONTACT</div></li></a>
+          <a href="/#work" class="nav color_orange"><li><div class="nav_num"><b>01</b></div><div class="nav_menu"><b>WORK</b></div></li></a>
+          <a href="/#info" class="nav color_orange"><li><div class="nav_num"><b>02</b></div><div class="nav_menu"><b>ABOUT</b></div></li></a>
+          <a href="/#archive" class="nav color_orange"><li><div class="nav_num"><b>03</b></div><div class="nav_menu"><b>ARCHIVE</b></div></li></a>
+          <a href="/#footer" class="nav color_orange"><li><div class="nav_num"><b>04</b></div><div class="nav_menu"><b>CONTACT</b></div></li></a>
         </ul>
       </nav>
       <a href="/" class="main header_name nav_menu color_orange">YOONSOO JAINE SHIN</a>
