--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/yeb3pny.css">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://use.typekit.net/oit7qkt.css">
     <script src="https://kit.fontawesome.com/210e747fd0.js" crossorigin="anonymous"></script>
     <script>
       (function(d) {
@@ -32,23 +33,6 @@
     <title>IT'S A ME, JAINE!</title>
   </head>
   <body class="bc_beige">
-    <!-- <div class="cursor"></div> -->
-    <header class="main_light main_nav">
-      <nav>
-        <ul class="nav-list main">
-          <a href="/#work" class="nav color_orange"><li><div class="nav_num">01</div><div class="nav_menu">WORK</div></li></a>
-          <a href="/#info" class="nav color_orange"><li><div class="nav_num">02</div><div class="nav_menu">ABOUT</div></li></a>
-          <a href="/#archive" class="nav color_orange"><li><div class="nav_num">03</div><div class="nav_menu">ARCHIVE</div></li></a>
-          <a href="/#footer" class="nav color_orange"><li><div class="nav_num">04</div><div class="nav_menu">CONTACT</div></li></a>
-        </ul>
-      </nav>
-      <a href="/" class="main header_name nav_menu color_orange">YOONSOO JAINE SHIN</a>
-      <div class="header_right nav_menu color_orange">
-        <b>JA</b>unty,<br>
-        <b>IN</b>finity,<br>
-        <b>ES</b>thetic!
-      </div>
-    </header>
     <div id="root"></div>
   </body>
 </html>
