--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       })(document);
     </script>
   
-    <title>IT'S A ME, JAINE!</title>
+    <title>IT'S JAINE!</title>
   </head>
   <body class="bc_beige">
     <div id="root"></div>
